--- a/Meme Editor/Info.plist
+++ b/Meme Editor/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Starjhol.ttf</string>
+		<string>MR ROBOT.ttf</string>
+		<string>Starjedi.ttf</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>&quot;Take a photo for memeing&quot;</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>&quot;Choose an existing photo&quot;</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
