Round 2: July 2017 - Not sure if I ever submitted anything for this project before. I looked at my previous project and adjusted some things. According to the v1.0 Meme Editor specs this should suffice.

--- a/Meme Editor/Info.plist
+++ b/Meme Editor/Info.plist
@@ -12,6 +12,8 @@
 	<string>&quot;Take a photo for memeing&quot;</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>&quot;Choose an existing photo&quot;</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>&quot;Allow saving to photo library&quot;</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
